<resources>
    <string name="accepting">I accept the Terms of Users &amp; Privacy Policy</string>
    <string name="address">Address</string>
    <string name="app_name">Senior Project</string>
    <string name="back">Go Back</string>
    <string name="city">City</string>
    <string name="continue_button">Continue</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your Email Address.</string>
    <string name="female">Female</string>
    <string name="first_name">First Name</string>
    <string name="forget_password">Forget password</string>
    <string name="forget_username">Forget User ID</string>
    <string name="gender">Gender</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="input_is_empty">Please Fill in the required fields.</string>
    <string name="last_name">Last Name</string>
    <string name="iron_lock">IRON LOCK</string>
    <string name="login">Login</string>
    <string name="login_failed">Login Failed! Please go back, try again!</string>
    <string name="logout">Logout</string>
    <string name="male">Male</string>
    <string name="profile">Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="password_did_not_match_record">This email address or password did not match out records.</string>
    <string name="password_must_match">Your password did not match.</string>
    <string name="sex">Sex</string>
    <string name="sign_up">Sign Up</string>
    <string name="state">State</string>
    <string name="re_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="username">Username</string>
    <string name="we_will_reset_password">We will help you reset your password after we confirm your email.</string>
    <string name="welcome">, Welcome to my WebPage!</string>
    <string name="you_must_agree">You must agree to our Policies</string>
    <string name="zip">Zip</string>
</resources>
