<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutForResetPassword"
    android:background="@color/forget_password_background"
    android:animateLayoutChanges="true">

    <include
        android:id="@+id/toolbarOnForGetPassword"
        layout="@layout/tool_bar_activity_forgetpassword"/><![CDATA[

    ]]><ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp"
        android:background="@drawable/rectangle"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/textViewForUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/clickable_blue"
            android:text="@string/forget_username"
            android:gravity="center"
            android:textSize="15sp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/textViewForForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:gravity="center"
            android:padding="3dp"
            android:textSize="20sp"
            android:textColor="@color/color_black"/>

        <View
            style="@style/divider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@color/color_black"
            android:text="@string/enter_email"
            />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@color/color_black"
            android:text="@string/we_will_reset_password"/>

        <EditText
            android:id="@+id/editTextForForgetPasswordEmail"
            android:layout_width="350dp"
            android:layout_height="35sp"
            android:background="@drawable/editable_text_forget_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp"/>

        <Button
            android:id="@+id/buttonForContinue"
            android:layout_width="350dp"
            android:layout_height="35sp"
            android:layout_margin="5dp"
            android:text="@string/continue_button"
            android:textColor="@color/color_white"
            android:background="@drawable/button_continue"/>


    </LinearLayout>
</ScrollView>


</LinearLayout>