<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:background="@drawable/grad_list"
    tools:context="com.example.lab4.MainActivity"
    android:animateLayoutChanges="true">

    <RelativeLayout
        android:id="@+id/rellay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_margin="40dp"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/lock">

        </ImageView>

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgView_logo"
            android:visibility="gone">

            <TextView
                android:id="@+id/lock_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Login"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/color_white"
                android:textSize="40sp">
            </TextView>

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_below="@+id/lock_login"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@+id/lock_login">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textAllCaps="true"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/color_white"
                        android:textSize="20sp">

                    </TextView>

                    <EditText
                        android:id="@+id/editTextForUserName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif-light"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/color_white"
                        android:background="@drawable/tx_bg">

                    </EditText>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textAllCaps="true"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/color_white"
                        android:textSize="20sp">

                    </TextView>

                    <EditText
                        android:id="@+id/editTextForPassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="15sp"
                        android:inputType="textPassword"
                        android:fontFamily="sans-serif-light"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/color_white"
                        android:background="@drawable/tx_bg">

                    </EditText>

                    <TextView
                        android:id="@+id/textViewForMissRecord"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password_did_not_match_record"
                        android:textColor="@color/color_red"
                        android:gravity="center"
                        android:visibility="invisible"/>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/buttonForLogin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/login_layout"
                android:layout_marginTop="50dp"
                android:textAllCaps="false"
                android:text="Login"
                android:background="@drawable/btn_bg"
                android:textColor="@color/color_white"
                android:fontFamily="sans-serif-condensed-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:layout_centerHorizontal="true"
                android:textSize="20sp">


            </Button>



        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay2"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonForSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="Sign Up"
            android:textAllCaps="true"
            android:textColor="@color/color_white">
        </Button>
        <Button
            android:id="@+id/buttonForForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/forget_password"
            android:textAllCaps="true"
            android:textColor="@color/color_white">
        </Button>

    </RelativeLayout>


</RelativeLayout>